CSS icon changed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li class="flex items-center gap-2"><img src="https://cdn.simpleicons.org/mysql/4479A1" class="w-4 h-4"> SQL</li>
                     <li class="flex items-center gap-2"><img src="https://upload.wikimedia.org/wikipedia/commons/1/18/C_Programming_Language.svg" class="w-4 h-4" alt="C">C</li>
                     <li class="flex items-center gap-2"><img src="https://cdn.simpleicons.org/html5/E34F26" class="w-4 h-4"> HTML </li>
-                    <li class="flex items-center gap-2"><img src="https://cdn.simpleicons.org/css3/1572B6" class="w-4 h-4" alt="CSS3">CSS</li>
+                    <li class="flex items-center gap-2"><img src="https://cdn.simpleicons.org/css/1E4F86" class="w-4 h-4" alt="CSS3">CSS</li>
                 </ul>
             </div>
 
