JS certificate added / Grid implemented to the certificates section

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <h2 class="text-xl font-bold mb-4">Education</h2>
             <div class="space-y-4 text-sm text-gray-700">
             <div>
-                <p class="font-medium">Ironhack Web Development Bootcamp</p>
+                <p class="font-medium">Ironhack Web Development In Person Bootcamp</p>
                 <p class="text-gray-500">Ironhack Lisbon - Merit Award</p>
             </div>
             <div>
@@ -192,10 +192,18 @@
         <!-- Certificates -->
         <div>
             <h2 class="text-xl font-bold mb-4">Certificates</h2>
-            <ul class="space-y-4 text-sm">
+            <ul class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm">
+                <li>
+                    <a href="https://www.credential.net/2546df37-0505-4e1c-a7ad-720ddcef0a7a" target="_blank" class="text-blue-600 hover:underline font-medium">Web Development Bootcamp</a>
+                    <div class="text-gray-600">Ironhack – Lisbon (in person)</div>
+                </li>
                 <li>
                     <a href="https://certificates.cs50.io/50ace5dc-059f-4215-aa83-66b1174b2b49.pdf" target="_blank" class="text-blue-600 hover:underline font-medium">CS50 – Introduction to Computer Science</a>
                     <div class="text-gray-600">Harvard School of Engineering and Applied Sciences (edX)</div>
+                </li>
+                <li>
+                    <a href="https://drive.google.com/file/d/1MaJnKbFx-Bwj0cSstf4KtgRmBDWMy48R/view" target="_blank" class="text-blue-600 hover:underline font-medium">Linguagens de Programação – Programação Web</a>
+                    <div class="text-gray-600">IEFP - Vila Nova de Gaia</div>
                 </li>
                 <li>
                     <a href="https://static.frontendmasters.com/ud/c/35e3570b74/qHdtZgDFSD/computer-science-v2.pdf" target="_blank" class="text-blue-600 hover:underline font-medium">Introduction to Computer Science</a>
@@ -206,16 +214,12 @@
                     <div class="text-gray-600">Frontend Masters</div>
                 </li>
                 <li>
-                    <a href="https://drive.google.com/file/d/1MaJnKbFx-Bwj0cSstf4KtgRmBDWMy48R/view" target="_blank" class="text-blue-600 hover:underline font-medium">Linguagens de Programação – Programação Web</a>
-                    <div class="text-gray-600">IEFP - Vila Nova de Gaia</div>
-                </li>
-                <li>
-                    <a href="https://www.credential.net/2546df37-0505-4e1c-a7ad-720ddcef0a7a" target="_blank" class="text-blue-600 hover:underline font-medium">Web Development</a>
-                    <div class="text-gray-600">Ironhack – Lisbon</div>
-                </li>
-                <li>
                     <a href="https://www.udemy.com/certificate/UC-b404741c-cff1-4502-a1e7-cac06799d1c7/" target="_blank" class="text-blue-600 hover:underline font-medium">Web Developer Bootcamp</a>
                     <div class="text-gray-600">Udemy</div>
+                </li>
+                <li>
+                    <a href="https://static.frontendmasters.com/ud/c/35e3570b74/PCLLiLkdZh/getting-started-javascript-v2.pdf" target="_blank" class="text-blue-600 hover:underline font-medium">Getting Started with JavaScript</a>
+                    <div class="text-gray-600">Frontend Masters</div>
                 </li>
                 <li>
                     <a href="https://drive.google.com/file/d/1cvGmw97gCmnet_gxbE_mOgxyghiYJDDf/view?usp=sharing" target="_blank" class="text-blue-600 hover:underline font-medium">Bachelor's Degree – Physical Education and Sport</a>
